src/main/java/syntactic/test/failing/empty.ru


/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 1 | Se esperaba [KW_START] pero se encontró EOF:  |